# sentry_robot_msg

./: CMakeLists.txt  package.xml
msg/: AerialCommands.msg  AutoaimInfo.msg  AutoaimInfoGazebo.msg  AutoaimInfoSpeed.msg  AutoaimTargetCmd.msg  BuildState.msg  BuildStateArray.msg  CamCommand.msg  CapEnabled.msg  ChassisInfo.msg  DecisionPoints.msg  FieldState.msg  FieldStatearray.msg  GimbalData.msg  OpCmd.msg  OrientInfo.msg  PathplanInfo.msg  RadarInfo.msg  RefereeData.msg  RefereeGameState.msg  RefereeRobotData.msg  ResetTime.msg  RobotBattleState.msg  RobotBloodInfo.msg  RobotInfo.msg  RobotInfoGazebo.msg  RobotInfoSpeed.msg  RobotState.msg  SentryRefereeDecision.msg  TargetOffset.msg  WalkCmd.msg
