cmake_minimum_required(VERSION 3.8)
project(robot_msgs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  msg/AutoaimInfoSpeed.msg
  msg/AutoaimInfoGazebo.msg
  msg/AutoaimInfo.msg
  msg/BuildState.msg
  msg/FieldStatearray.msg
  msg/FieldState.msg
  msg/OrientInfo.msg
  msg/PathPos.msg
  msg/PathplanInfo.msg
  msg/ResetTime.msg
  msg/RadarInfo.msg
  msg/RobotBattleState.msg
  msg/RobotBloodInfo.msg
  msg/RobotInfoGazebo.msg
  msg/RobotInfo.msg
  msg/RobotInfoSpeed.msg
  msg/RobotState.msg
  msg/WalkCmd.msg
  msg/CamCommand.msg
  msg/OpCmd.msg
  msg/BuildStateArray.msg
  msg/RefereeData.msg
  msg/GimbalData.msg
  msg/IntArray.msg
  "msg/RefereeGameState.msg"
  DEPENDENCIES std_msgs geometry_msgs
)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()

